--- a/index.html
+++ b/index.html
@@ -30,37 +30,126 @@
 
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <p><img src="https://github.com/vrajur/Modeling-Diffusion-Limited-Aggregation/blob/master/LaTeX_Source/Header_Image.png" alt="Header Image" title="DLA Particle Cluster (Output from Simulation)"></p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<h1>
+<a id="modeling-diffusion-limited-aggregation" class="anchor" href="#modeling-diffusion-limited-aggregation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Modeling-Diffusion-Limited-Aggregation</h1>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>Authors: Vinay Rajur</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Last Updated: 6/3/2015</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h2>
+<a id="summary" class="anchor" href="#summary" aria-hidden="true"><span class="octicon octicon-link"></span></a>Summary:</h2>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>A project to simulate the physical mechanism underlying some types of crystal 
+formation processes. The goal of this project is to study the effectiveness and
+limitations of the numerical model in simulating the process of Diffusion 
+Limited Aggregation.</p>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<h2>
+<a id="operation-instructions" class="anchor" href="#operation-instructions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Operation Instructions:</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>To run the simulation clone the <em>Source_Code</em> directory and the file <em>Final.cpp</em>
+which will output the simulation results to the file "pos.dat". Move this file
+into the same directory as plott2.m and running that script will plot the 
+particle distribution generated from the simulation and will also output the 
+results of various analyses on the data.</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<h2>
+<a id="implementation-overview" class="anchor" href="#implementation-overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Implementation Overview:</h2>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>The simulation is written in C++ and uses Monte-Carlo methods to implement a 
+series of random walks on a set number of particles. The simulation is initialized
+with a seed particle and one random walker particle. At each step in the random
+walk, various conditions are checked to see if the random walker will bind to the
+aggregate structure in its current position. Once the particle is bound a new 
+random walker is randomly initialized. The simulation runs until a set number of 
+particles are bound.</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<h2>
+<a id="repository-overview" class="anchor" href="#repository-overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Repository Overview:</h2>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p><strong>Project Report:</strong> <em>Modeling Diffusion Limited Aggregation.pdf</em></p>
+
+<p><strong>Source Code:</strong> Contains C++ files which are the numerical model implementation
+    as well as MATLAB files for plotting and data analysis </p>
+
+<p><strong>LaTeX Source:</strong> Contains LaTeX source files used for creating the project report</p>
+
+<h2>
+<a id="directory-of-key-files" class="anchor" href="#directory-of-key-files" aria-hidden="true"><span class="octicon octicon-link"></span></a>Directory of Key Files:</h2>
+
+<p><strong>Source Code/Final.cpp</strong></p>
+
+<ul>
+<li>Script to initialize parameters, run DLA simulation, and output particle 
+locations to text file </li>
+</ul>
+
+<p><strong>Source Code/r_walk.h</strong></p>
+
+<ul>
+<li>Function to test properties of the random walk model used in final.cpp</li>
+</ul>
+
+<p><strong>Source Code/p_neighbors.h</strong></p>
+
+<ul>
+<li>Function to calculate and return the probability (as a function of neighboring 
+particles)of a particle sticking to the aggregate</li>
+</ul>
+
+<p><strong>Source Code/p_curvature.h</strong></p>
+
+<ul>
+<li>Function to calculate and return the probability (as a function of local
+curvature of the aggregrate) of a particle sticking to the aggregate</li>
+</ul>
+
+<p><strong>Source Code/p_coeff.h</strong></p>
+
+<ul>
+<li>Function to calculate and return the probability (as a constant-valued 
+function) of a particle sticking to the aggregate</li>
+</ul>
+
+<p><strong>Source Code/arrayt.hpp</strong></p>
+
+<ul>
+<li>C++ array implementation supplied by professor (not authored by me)</li>
+</ul>
+
+<p><strong>Source Code/MATLAB (plotting)/circularity.m</strong></p>
+
+<ul>
+<li>Script to calculate circularity of aggregate structure</li>
+</ul>
+
+<p><strong>Source Code/MATLAB (plotting)/plott2.m</strong></p>
+
+<ul>
+<li>Script to read output data file containing particle locations and produce plot
+of aggregrate and calculate property values of the simulation</li>
+</ul>
+
+<p><strong>Source Code/MATLAB (plotting)/rwalkstest.m</strong></p>
+
+<ul>
+<li>Script to analyze output data from r_walk.h</li>
+</ul>
+
+<p><strong>LaTex Write Up/Final Project.tex</strong></p>
+
+<ul>
+<li>LaTeX file for project report</li>
+</ul>
+
+<p><strong>LaTex Write Up/Final Project.bbl</strong></p>
+
+<ul>
+<li>BibTeX file containing bibliographic information for report</li>
+</ul>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
